plugins {
    id("java-library")
    id("maven-publish")
}

group = "net.gudenau.lib"
version = "1.4.4"

sourceCompatibility = 16
targetCompatibility = 16

repositories {
    mavenCentral()

    maven {url = "https://maven.auoeke.net"}
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter:latest.release")
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }

    repositories {
        mavenLocal()

        maven {
            url = "https://maven.auoeke.net"

            credentials {
                username = System.properties["maven.username"]
                password = System.properties["maven.password"]
            }
        }
    }
}
